--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2D Physics Simulator</title>
+    <style>
+        #canvas {
+            border: 2px solid black; 
+        }
+    </style>
   </head>
   <body>
     <canvas id="canvas" width="500" height="500"></canvas>
